add facts gathering for debops ferm
Signed-off-by: Sergio Nemirowski <sergio@outerface.net>

--- a/roles/rest_gw/tasks/main.yml
+++ b/roles/rest_gw/tasks/main.yml
@@ -35,10 +35,5 @@
     dest: '/etc/systemd/system/neofs-rest.service'
   notify: [ 'Restart NeoFS REST service' ]
 
-- name: Force debops.ferm run
-  ansible.builtin.include_role:
-    name: debops.debops.ferm
-  vars:
-    ferm__dependent_rules:
-      - '{{ neofs_rest__ferm__dependent_rules }}'
+- ansible.builtin.include_tasks: ferm-debops.yml
   when: neofs_rest__debops_ferm_import|bool
