--- a/roles/storage/tasks/main.yml
+++ b/roles/storage/tasks/main.yml
@@ -65,10 +65,5 @@
 
 - ansible.builtin.include_tasks: healthcheck.yml
 
-- name: Force debops.ferm run
-  ansible.builtin.include_role:
-    name: debops.debops.ferm
-  vars:
-    ferm__dependent_rules:
-      - '{{ neofs_storage__ferm__dependent_rules }}'
+- ansible.builtin.include_tasks: ferm-debops.yml
   when: neofs_storage__debops_ferm_import|bool
