--- a/roles/http_gw/tasks/wallet.yml
+++ b/roles/http_gw/tasks/wallet.yml
@@ -2,7 +2,7 @@
 
 - name: Copy NeoFS HTTP wallet
   ansible.builtin.copy:
-    content: '{{ neofs_http__wallet_struct | to_nice_json(ensure_ascii=False) }}'
+    src: '{{ neofs_http__wallet }}'
     dest: '{{ neofs_http__wallet_path }}'
     owner: 'root'
     group: '{{ neofs_http__group }}'
