--- a/roles/rest_gw/tasks/wallet.yml
+++ b/roles/rest_gw/tasks/wallet.yml
@@ -2,7 +2,7 @@
 
 - name: Copy NeoFS REST wallet
   ansible.builtin.copy:
-    content: '{{ neofs_rest__wallet_struct | to_nice_json(ensure_ascii=False) }}'
+    content: '{{ neofs_rest__wallet }}'
     dest: '{{ neofs_rest__wallet_path }}'
     owner: 'root'
     group: '{{ neofs_rest__group }}'
