--- a/roles/s3_gw/defaults/main.yml
+++ b/roles/s3_gw/defaults/main.yml
@@ -19,6 +19,8 @@ neofs_s3__bin_path: '/usr/bin/neofs-s3-gw'
 
 neofs_s3__wallet: ''
 neofs_s3__wallet_path: '{{ neofs_s3__conf_dir }}/wallet.json'
+neofs_s3__wallet_address: ''
+neofs_s3__wallet_password: ''
 
 neofs_s3__s3_address: '::'
 neofs_s3__s3_port: 8084
@@ -42,8 +44,8 @@ neofs_s3__raw_config:
     level: info
   wallet:
     path: '{{ neofs_s3__wallet_path }}'
-    passphrase: ''
-    address: ''
+    address: '{{ neofs_s3__wallet_address }}'
+    password: '{{ neofs_s3__wallet_password }}'
   server:
     - address: '{{ neofs_s3__s3_address | ansible.utils.ipwrap }}:{{ neofs_s3__s3_port }}'
   rpc_endpoint: 'http://localhost:40332'
