--- a/roles/s3_gw/defaults/main.yml
+++ b/roles/s3_gw/defaults/main.yml
@@ -17,7 +17,11 @@ neofs_s3__group: 'neofs-s3'
 neofs_s3__conf_dir: '/etc/neofs/s3'
 neofs_s3__bin_path: '/usr/bin/neofs-s3-gw'
 
-neofs_s3__wallet: ''
+neofs_s3__neofs_adm_cmd:    '{{ inventory_dir }}/../tmp/downloads/neofs-adm'
+neofs_s3__neofs_adm_config: '{{ inventory_dir }}/configuration/config.yaml'
+neofs_s3__alphabet_wallets: '{{ inventory_dir }}/configuration/alphabet'
+
+neofs_s3__wallet: '{{ inventory_dir }}/configuration/wallets/s3/{{ inventory_hostname }}.json'
 neofs_s3__wallet_path: '{{ neofs_s3__conf_dir }}/wallet.json'
 neofs_s3__wallet_address: ''
 neofs_s3__wallet_password: ''
