--- a/roles/storage/defaults/main.yml
+++ b/roles/storage/defaults/main.yml
@@ -112,7 +112,7 @@ neofs_storage__grpc_ferm_rules: |
   {% for endpoint in neofs_storage__grpc_endpoints %}
   {% if 'enabled' not in endpoint or endpoint.enabled %}
   - dport: [ '{{ endpoint.port }}' ]
-    daddr: [ "{{ endpoint.address }}{{ '/0' if endpoint.address in ['0.0.0.0', '::0', '::'] }}" ]
+    daddr: [ "{{ ( endpoint.address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', endpoint.address ) }}" ]
     saddr: {{ endpoint.allow }}
     protocol: 'tcp'
   {% endif %}
