--- a/roles/ir/defaults/main.yml
+++ b/roles/ir/defaults/main.yml
@@ -119,6 +119,8 @@ neofs_ir__raw_config:
     address: '{{ neofs_ir__wallet_address }}'
     password: '{{ neofs_ir__wallet_password }}'
 
+  fschain_autodeploy: True
+
   node:
     persistent_state:
       path: '{{ neofs_ir__data_dir }}/state'
