--- a/roles/ir/tasks/binary.yml
+++ b/roles/ir/tasks/binary.yml
@@ -7,7 +7,7 @@
     github__org: '{{ neofs_ir__github_org }}'
     github__repo: '{{ neofs_ir__github_repo }}'
     github__version: '{{ neofs_ir__version }}'
-    github__asset_name: '{{ neofs_ir__bin }}-{{ neofs_ir__arch }}'
+    github__asset_name: '{{ neofs_ir__bin }}-linux-{{ neofs_ir__arch }}'
     github__args:
       dest: '{{ neofs_ir__bin_path }}'
       owner: 'root'
