--- a/roles/storage/tasks/binary.yml
+++ b/roles/storage/tasks/binary.yml
@@ -7,7 +7,7 @@
     github__org: '{{ neofs_storage__github_org }}'
     github__repo: '{{ neofs_storage__github_repo }}'
     github__version: '{{ neofs_storage__version }}'
-    github__asset_name: '{{ neofs_storage__bin }}-{{ neofs_storage__arch }}'
+    github__asset_name: '{{ neofs_storage__bin }}-linux-{{ neofs_storage__arch }}'
     github__args:
       dest: '{{ neofs_storage__bin_path }}'
       owner: 'root'
