don't create ferm rules for localhost
Signed-off-by: Sеrgiо Nеmirоwski <sergio@nspcc.io>

--- a/roles/ir/defaults/main.yml
+++ b/roles/ir/defaults/main.yml
@@ -222,7 +222,7 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__prometheus_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__prometheus_address ) }}" ]
     saddr: '{{ neofs_ir__prometheus_allow + neofs_ir__prometheus_group_allow + neofs_ir__prometheus_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_ir__prometheus_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_ir__prometheus_enabled and neofs_ir__prometheus_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_pprof'
@@ -230,7 +230,7 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__pprof_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__pprof_address ) }}" ]
     saddr: '{{ neofs_ir__pprof_allow + neofs_ir__pprof_group_allow + neofs_ir__pprof_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_ir__pprof_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_ir__pprof_enabled and neofs_ir__pprof_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_control'
@@ -238,7 +238,7 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__control_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__control_address ) }}" ]
     saddr: '{{ neofs_ir__control_allow + neofs_ir__control_group_allow + neofs_ir__control_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_ir__control_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_ir__control_enabled and neofs_ir__control_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_rpc'
@@ -246,7 +246,7 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__blockchain_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_rpc_address ) }}" ]
     saddr: '{{ neofs_ir__blockchain_rpc_allow + neofs_ir__blockchain_rpc_group_allow + neofs_ir__blockchain_rpc_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if not neofs_ir__external_sidechain else 'absent' }}"
+    rule_state: "{{ 'present' if not neofs_ir__external_sidechain and neofs_ir__blockchain_rpc_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_tls_rpc'
@@ -254,7 +254,7 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__blockchain_tls_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_tls_rpc_address ) }}" ]
     saddr: '{{ neofs_ir__blockchain_tls_rpc_allow + neofs_ir__blockchain_tls_rpc_group_allow + neofs_ir__blockchain_tls_rpc_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_ir__blockchain_tls_rpc_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_ir__blockchain_tls_rpc_enabled and neofs_ir__blockchain_tls_rpc_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_p2p'
@@ -262,4 +262,4 @@ neofs_ir__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_ir__blockchain_p2p_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_p2p_address ) }}" ]
     saddr: '{{ neofs_ir__blockchain_p2p_allow + neofs_ir__blockchain_p2p_group_allow + neofs_ir__blockchain_p2p_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if not neofs_ir__external_sidechain else 'absent' }}"
+    rule_state: "{{ 'present' if not neofs_ir__external_sidechain and neofs_ir__blockchain_p2p_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
