--- a/roles/rest_gw/defaults/main.yml
+++ b/roles/rest_gw/defaults/main.yml
@@ -126,7 +126,7 @@ neofs_rest__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_rest__prometheus_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_rest__prometheus_address ) }}" ]
     saddr: '{{ neofs_rest__prometheus_allow + neofs_rest__prometheus_group_allow + neofs_rest__prometheus_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_rest__prometheus_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_rest__prometheus_enabled and neofs_rest__prometheus_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
 
   - type: 'accept'
     name: 'neofs-rest{{ neofs_rest__instance }}_pprof'
@@ -134,4 +134,4 @@ neofs_rest__ferm__dependent_rules:
     daddr: [ "{{ ( neofs_rest__pprof_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_rest__pprof_address ) }}" ]
     saddr: '{{ neofs_rest__pprof_allow + neofs_rest__pprof_group_allow + neofs_rest__pprof_host_allow }}'
     protocol: 'tcp'
-    rule_state: "{{ 'present' if neofs_rest__pprof_enabled else 'absent' }}"
+    rule_state: "{{ 'present' if neofs_rest__pprof_enabled and neofs_rest__pprof_address not in ['localhost', '127.0.0.1', '::1'] else 'absent' }}"
