--- a/roles/storage/tasks/main.yml
+++ b/roles/storage/tasks/main.yml
@@ -65,5 +65,7 @@
 
 - ansible.builtin.include_tasks: healthcheck.yml
 
-- ansible.builtin.include_tasks: ferm-debops.yml
-  when: neofs_storage__debops_ferm_import|bool
+- name: Save debops.ferm rules as facts
+  tags: [ 'role::ferm', 'skip::ferm' ]
+  ansible.builtin.set_fact:
+    neofs_storage__ferm__rules: '{{ neofs_storage__ferm__rules|d([]) + neofs_storage__ferm__dependent_rules }}'
